2007-11-24  Roland Mas  <lolando@debian.org>

	* etc/httpd.d/06maindirhttp: Setup alias directive for /fckeditor/
	in case it's installed system-wide.
	* etc/httpd.d/07maindirhttp.ssl: Ditto.

	* plugins/fckeditor/common/fckeditorPlugin.class.php: Add run-time
	detection of an FCKeditor installed system-wide.  Use it when
	present, otherwise keep using the local copy.

	* www/include/trove.php: Removed undefined index warnings, and
	made a few strings translatable.

	* common/include/Group.class.php: Removed undefined variable
	warnings.

2007-11-23  Roland Mas  <lolando@debian.org>

	* www/project/admin/group_trove.php: Removed undefined variable
	warning.

	* www/snippet/submit.php: Removed undefined variable warning, and
	made a few strings translatable.

	* gforge/www/themes/gforge/images/icon.png: New file.

2007-11-21  Roland Mas  <lolando@debian.org>

	* deb-specific/stats_projects_logparse.pl: Parse IPv6 addresses as
	well as IPv4.

	* common/include/session.php: Made session_check_ip() able to
	compare IPv6 addresses as well as IPv4 ones.

	* deb-specific/install-db.sh: Setup database for access through
	the Unix socket rather than TCP socket (in order to lighten the
	dependency on IP addresses).

2007-11-20  Roland Mas  <lolando@debian.org>

	* common/include/cron_utils.php: Made the semaphore handling a bit
	more robust.

2007-11-09  Roland Mas  <lolando@debian.org>

	* common/include/PluginManager.class.php: Fixed undefined variable
	bug detected by a PHP notice.
	* www/include/project_home.php: Ditto.

	* Replaced $sys_datefmt with a localised format (lots of changes).
	* Ditto with $sys_shortdatefmt.
	* Removed unused $sys_strftimefmt.

2007-11-07  Roland Mas  <lolando@debian.org>

	* common/include/GroupJoinRequest.class.php: New
	send_accept_mail() function.
	* www/project/admin/index.php: Use it.

2007-11-06  Roland Mas  <lolando@debian.org>

	* www/include/BaseLanguage.class.php: Added