@@ -499,6 +499,7 @@ class ForumHTML extends Error {
 		<br>
 		<strong><?php echo _('Message:'); ?></strong><?php echo notepad_button('document.forms[1].body') ?><?php echo utils_requiredField(); ?><br />
 		<?php
+                $params = array() ;
 		$params['body'] = $body;
 		$params['width'] = "800";
 		$params['height'] = "500";
@@ -576,6 +577,7 @@ function showPostForm($thread_id=0, $is_followup_to=0, $subject="") {
 
 		<?php
 		$GLOBALS['editor_was_set_up']=false;
+                $params = array();
 		$params['body'] = $body;
 		$params['width'] = "800";
 		$params['height'] = "500";
